--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <li class="nav-item">
       <a class="nav-link" href="#">Usability Testing/Findings</a> 
     <li class="nav-item">
-    <a class="nav-link" href="#">Prototype</a>
+    <a class="nav-link" href="#protypescr">Prototype</a>
     </li>
   </ul>
 </nav>
@@ -41,7 +41,7 @@
         </p>
     </div>
   </div>
-  <h3 class="prototypesection">PROTOTYPES</h3>
+  <h3 class="prototypesection" id="protypescr">PROTOTYPES</h3>
   <!---Bootstrap's Col System-->
   <section>
     <div class="back"></div>
