--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <div class="col-md-12 m-auto">
             <h3 class="pb-0 mbr-fonts-style display-6">Journey Map</h3>
             <div class="content-wrapper align-left">
-                <p style="text-align: left;" class="mbr-text mbr-white mbr-regular mbr-black mbr-fonts-style display-12">Creating a user Proto-Persona is the first step to defining our user. The proto persona is a made up user that we create based on our assumptions of the type of person that would use our site or app. In the case of Denver Cat Company we at least knew that the typical user at least likes cats and most likely wants to adopt a cat from the site.</p>
+                <p style="text-align: left;" class="mbr-text mbr-white mbr-regular mbr-black mbr-fonts-style display-12">This is about what Paul experiences in his journey from wanting a cat and adopting a cat through Denver Cat Company's website. A better understanding through Paul's feelings and thoughts show us where there are opportunities for us to improve. We can get a clearer picture of how to make our users' experience with Denver Cat Company stress free through Paul's journey map.  </p>
             </div></div>
     </div>
 </div>
