--- a/index.html
+++ b/index.html
@@ -211,7 +211,12 @@
         <div class="col-md-12 m-auto">
             <h3 class="pb-0 mbr-fonts-style display-6">Storyboard</h3>
             <div class="content-wrapper align-left">
-                <p style="text-align: left;" class="mbr-text mbr-white mbr-regular mbr-black mbr-fonts-style display-12">Creating a user Proto-Persona is the first step to defining our user. The proto persona is a made up user that we create based on our assumptions of the type of person that would use our site or app. In the case of Denver Cat Company we at least knew that the typical user at least likes cats and most likely wants to adopt a cat from the site.</p>
+                <p style="text-align: left;" class="mbr-text mbr-white mbr-regular mbr-black mbr-fonts-style display-12">Here we have a storyboard of Paul's cat adoption experience from beginning to end. Created with StoryboardThat.com </p> 
+                <p style="text-align: left;" class="mbr-text mbr-white mbr-regular mbr-black mbr-fonts-style display-12"> Panel 1: Paul is trying to find the purrfect pet (cat) to adopt. He's been searching online and a local cat adoption's website has outdated information and he can't schedule a visit around his busy schedule.</p>
+                <p style="text-align: left;" class="mbr-text mbr-white mbr-regular mbr-black mbr-fonts-style display-12">  Panel 2: Paul works in a brewery and daydreams about finding a companion that can be independent while he's away. He's often active and would love an active cat to possibly take along on trips. </p>
+                    <p style="text-align: left;" class="mbr-text mbr-white mbr-regular mbr-black mbr-fonts-style display-12">Panel 3: On Instagram, he found Denver Cat Company's page and went to their website linked on their page. He found a cat's profile that seemed to be the perfect match, the one he had always wanted. </p>
+                        <p style="text-align: left;" class="mbr-text mbr-white mbr-regular mbr-black mbr-fonts-style display-12">Panel 4: He booked a visit to the cafe through the website, to meet his new companion. He grabbed a quick drink and chatted with his fellow cat lovers while filling out his adoption paperwork. </p>
+                            <p style="text-align: left;" class="mbr-text mbr-white mbr-regular mbr-black mbr-fonts-style display-12">Panel 5: Paul and his new pal return home happy to have found each other through Denver Cat Company.</p>
             </div></div>
     </div>
 </div>
