--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <h3 class="pb-0 mbr-fonts-style display-6">Low Fidelity Wireframes of Main Pages</h3>
             <div class="content-wrapper align-left">
                 <h5 class="mbr-section-subtitle mbr-regular mbr-white pb-2 mbr-fonts-style display-8"><strong>Before Client Meeting</strong></h5>
-                <p style="text-align: left;" class="mbr-text mbr-white mbr-regular mbr-black mbr-fonts-style display-12">We started our low fidelity wireframes with the building as the base of every page. We created the Homepage, Gift Cards & Memberships page, and The Cats page. Later after a deep dive into the existing website, we discovered an Arts & Cats (Crafts) page. There were two main call to actions: 'Donate' button and 'Book A Visit' button. We decided to put the 'Donate' button at the top of the hierarchy. The 'Book A Visit' button was placed on the door along with the store information such as location, hours of operations, and phone number. The original site also had a newsletter that had a statement of how they "might not answer back" so it was placed at the bottom, then in later iterations the newsletter sign up was moved to the Gift Cards & Memberships page.   </p>
+                <p style="text-align: left;" class="mbr-text mbr-white mbr-regular mbr-black mbr-fonts-style display-12">We began our low fidelity wireframes with the building as the base of every page. We created the Homepage, Gift Cards & Memberships page, and The Cats page. Later, after a thorough review of the existing website, we discovered an Arts & Cats (Crafts) page that would need to be added to our designs. There were two main call-to-actions: a 'Donate' button and a 'Book A Visit' button. We decided to prioritize the 'Donate' button at the top of the hierarchy. The 'Book A Visit' button was placed on the door, along with store information such as location, hours of operations, and phone number. The original site also had a newsletter with a statement about how they "might not answer back," so it was placed at the bottom. In later iterations, the newsletter sign up was moved to the Gift Cards & Memberships page.</p>
             </div></div>
     </div>
 </div>
@@ -367,7 +367,7 @@
         <div class="col-md-4 m-auto">
             <div class="content-wrapper align-left">
                 <h4 class="mbr-section-subtitle mbr-regular mbr-black pb-2 mbr-fonts-style display-6">User Flow Chart</h4>
-                <p class="mbr-text mbr-white mbr-regular mbr-black mbr-fonts-style display-12">User flows determine the path a user will take to reach thier goal. User flows provide a step by step breakdown through the site to accomplish tasks.<br></p>
+                <p class="mbr-text mbr-white mbr-regular mbr-black mbr-fonts-style display-12">User flows determine the path a user will take to reach thier goal. User flows provide a step by step breakdown through the site to accomplish tasks. This user flow is for a user going to the site with the goal of booking an apppointment to meet a cat to adopt.<br></p>
                 
             </div>
         </div>
