--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <nav>
         
 <ul class="nav justify-content-center">
-    <a class="link" href="https://kyledesigns.github.io/UX_UI_HW_19/"><img src="images/KATlogoColor.png" width="38%" alt="Portfolio Logo" class="logo"></a>
+    <a class="link" href="https://kyledesigns.github.io/Kyle-Addison-Portfolio/"><img src="images/KATlogoColor.png" width="38%" alt="Portfolio Logo" class="logo"></a>
     <li class="nav-item">
       <a class="nav-link active" href="#process">The Process</a>
     </li>
