So close to finished
Just need to add mobile prototype and a conclusions section, fix top nav to top when scrolling

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
             <h3 class="pb-0 mbr-fonts-style display-6">Desktop Wireframes</h3>
             <div class="content-wrapper align-left">
                 <h5 class="mbr-section-subtitle mbr-regular mbr-white pb-2 mbr-fonts-style display-8"><strong>After Client Meeting</strong></h5>
-                <p style="text-align: left;" class="mbr-text mbr-white mbr-regular mbr-black mbr-fonts-style display-12">Desktop was redesigned quickly using the first pre-client prototype's assets.</p>
+                <p style="text-align: left;" class="mbr-text mbr-white mbr-regular mbr-black mbr-fonts-style display-12">The desktop version of the website was quickly redesigned using the first pre-client prototype assets. The site was redesigned as a single, scrollable page, with the exception of the "Book A Visit" page, which was kept separate due to the large number of form fields it contained. The company name was altered to match the font of the company logo. The "Memberships", "Gift Cards", and "Arts & Crafts" sections were removed, as well as the lamp post, picture frames, and building aesthetics. The four buttons in the windows at the top of the page scroll down to the corresponding section when clicked. The yellow cat logo remains fixed to the top left during scrolling and takes the user back to the top of the page when clicked.</p>
             </div></div>
         <div class="col-sm-6 m-auto">
             <div class="content-wrapper align-left">
@@ -462,7 +462,7 @@
             <div class="content-wrapper align-left">
             <h4 class="pb-2 mbr-fonts-style display-6">Final Desktop Prototype</h4>
             <h5 class="pb-2 mbr-fonts-style display-8"><strong>After Client Meeting</strong></h5>
-            <p>We were able to make the iterations for the design after speaking with the client while still keeping it user focused. She was very busy and we were appreciative for her taking the time to meet with us. We were not able to get as much into explaining the user research that we conducted. So the site is more redesigned into what the client wants vs what the user needs. If I could go back I would try to explain more what User Experience Design is and why user focus is so important.
+            <p>We were able to make design iterations after speaking with the client, while also trying to keep the user in focus. We were grateful for the client taking the time to meet with us, though we weren't able to explain the user research we conducted in detail. As a result, the site was redesigned more for the client's wants than the user's needs. If I could go back, I would try to explain more about User Experience Design and why user focus is so important. Additionally, I would like to run user testing on the post-client meeting redesign.
         </p></div> 
     </div>
         <div class="col-sm-6 m-auto"><img src="images/CatCompanyFinalGIF.gif" class="img-responsive" alt="Some picture" width="100%"></div>
@@ -474,7 +474,7 @@
             <h3 class="pb-0 mbr-fonts-style display-6">Mobile Wireframes</h3>
             <div class="content-wrapper align-left">
                 <h5 class="mbr-section-subtitle mbr-regular mbr-white pb-2 mbr-fonts-style display-8"><strong>After Client Meeting</strong></h5>
-                <p style="text-align: left;" class="mbr-text mbr-white mbr-regular mbr-black mbr-fonts-style display-12">Mobile was redesigned quickly using the first pre-client prototype's assets.</p>
+                <p style="text-align: left;" class="mbr-text mbr-white mbr-regular mbr-black mbr-fonts-style display-12">The mobile version of the website was also quickly redesigned using the first pre-client prototype assets. The buttons were placed above the windows, and the desktop version should have been done the same way. The site was redesigned as a single, scrollable page, with the exception of the "Book A Visit" page, which had a large number of form fields and was kept separate. The mobile version was designed with a four-column grid and re-organized to fit the screen. The company name was changed to match the font of the company logo. The "Memberships", "Gift Cards", and "Arts & Crafts" sections, as well as the lamp post, picture frames, and building aesthetics, were removed. The four buttons at the top of the page scroll down to the corresponding section when clicked and remain fixed to the top when scrolling, along with the logo and company name.</p>
             </div></div>
         <div class="col-sm-6 m-auto">
             <div class="content-wrapper align-left">
