--- a/index.html
+++ b/index.html
@@ -489,8 +489,8 @@
        
         <div class="col-md-6 m-auto">
             <div class="content-wrapper align-left">
-            <h4 class="pb-2 mbr-fonts-style display-6">In Conclusion</h4>
-            <p>We were grateful that the client, founder of Denver Cat Company, took the time to meet with us despite their busy schedule. We had forty minutes to discuss the project before her next meeting. We presented her with our research and prototype, and she liked it, but it wasn't the direction she wanted to go with the redesign. She explained that the arts and crafts portion of the company had been eliminated. The frame in the logo, the 'Art.Cats.Cafe' logo subtext, and the paintbrush decal in the window were all discarded. She also mentioned that she is in the process of removing the memberships and gift cards. We learned that while she liked the darker background color, she wanted the site to be all on one page, more like a blog setup. We had to rapidly redesign our prototype to meet the client's needs before the deadline.</p>
+            <h4 class="pb-2 mbr-fonts-style display-6">Final & Future Thoughts</h4>
+            <p>After meeting with our stakeholder, Leila, she expressed a desire for a polished, sophisticated, and slick website design. Unfortunately, she informed us that Squarespace was currently the only platform available for creating and updating the site. Leila's hectic schedule prevented her from offering further details, causing our team to struggle to make our design vision understood. We had a limited window to make alterations based on the new info received during the meeting, but we still managed to create a website that could be tested by users. The success of this project in the future revolves around our ability to demonstrate to the stakeholders that the website we designed is tailored to the users' needs and that we understand the importance of providing a smooth user experience. It was a fun and incredible learning experience for the whole team.</p>
         </div> 
     </div>
         <div class="col-md-6 m-auto"><img src="images/Screenshot Devices.png" class="img-responsive" alt="Some picture" width="100%"></div>
