--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 <!--Bootstrap's Nav Component-->
-<nav>
+<nav class="sticky-top">
         
 <ul class="nav justify-content-center">
     <a class="link" href="https://kyledesigns.github.io/Kyle-Addison-Portfolio/"><img src="images/KATlogoColor.png" width="38%" alt="Portfolio Logo" class="logo"></a>
