--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <!-- CSS only -->
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<link rel="stylesheet" href="style.css"> 
-
+<script src="/js/index.js"></script>
     </head>
     <body>
 <!-- JavaScript Bundle with Popper -->
@@ -497,5 +498,6 @@
     </div>
 </div>
 </section>
+<button onclick="topFunction()" id="myButn" title="Go to top">Top</button>
     </body>
 </html>
