--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
     </div>
 </div>
 </section>
-<button onclick="topFunction()" id="myBtn" title="Go to top"><a href="#top" style="color:white; text-decoration: none; line-height: 0px; margin: 0px; ">V</a></button>
+<button onclick="topFunction()" id="myBtn" title="Go to top" style="display:block;"><a href="#top" style="color:white; text-decoration: none; line-height: 0px; margin: 0px; ">V</a></button>
 <script src="/js/index.js"></script>
     </body>
 </html>
